--- a/src/app/views/clientes/clientes.component.html
+++ b/src/app/views/clientes/clientes.component.html
@@ -39,7 +39,7 @@
         <h1>Ingresar Persona</h1>
         <c-input-group class="mb-3">
           <span cInputGroupText>
-            <svg cIcon name="cilUser"></svg>
+            <svg cIcon name="cilCreditCard"></svg>
           </span>
           <input formControlName="cedula" cFormControl placeholder="Cedula" required
           />
@@ -49,7 +49,7 @@
         </c-input-group>
         <c-input-group class="mb-3">
           <span cInputGroupText>
-            <svg cIcon name="cilUser"></svg>
+            <svg cIcon name="cil-paragraph"></svg>
           </span>
           <input formControlName="nombre" cFormControl placeholder="Nombre" required
           />
@@ -59,7 +59,7 @@
         </c-input-group>
         <c-input-group class="mb-3">
           <span cInputGroupText>
-            <svg cIcon name="cilUser"></svg>
+            <svg cIcon name="cil-paragraph"></svg>
           </span>
           <input formControlName="apellido" cFormControl placeholder="Apellido" required
           />
@@ -69,7 +69,7 @@
         </c-input-group>
         <c-input-group class="mb-3">
           <span cInputGroupText>
-            <svg cIcon name="cilCreditCard"></svg>
+            <svg cIcon name="cilSync"></svg>
           </span>
           <select class="form-select" formControlName="rol" cFormControl required
           >
@@ -134,7 +134,7 @@
             <h1>Editar</h1>
             <c-input-group class="mb-3">
           <span cInputGroupText>
-            <svg cIcon name="cilUser"></svg>
+            <svg cIcon name="cilCreditCard"></svg>
           </span>
               <input formControlName="cedula" cFormControl placeholder="Cedula" required
               />
@@ -144,7 +144,7 @@
             </c-input-group>
             <c-input-group class="mb-3">
           <span cInputGroupText>
-            <svg cIcon name="cilUser"></svg>
+            <svg cIcon name="cil-paragraph"></svg>
           </span>
               <input formControlName="nombre" cFormControl placeholder="Nombre" required
               />
@@ -154,7 +154,7 @@
             </c-input-group>
             <c-input-group class="mb-3">
           <span cInputGroupText>
-            <svg cIcon name="cilUser"></svg>
+            <svg cIcon name="cil-paragraph"></svg>
           </span>
               <input formControlName="apellido" cFormControl placeholder="Apellido" required
               />
@@ -164,7 +164,7 @@
             </c-input-group>
             <c-input-group class="mb-3">
           <span cInputGroupText>
-            <svg cIcon name="cilCreditCard"></svg>
+            <svg cIcon name="cilSync"></svg>
           </span>
               <select class="form-select" formControlName="rol" cFormControl required
               >
