--- a/src/app/views/monitoreo/monitoreo.component.scss
+++ b/src/app/views/monitoreo/monitoreo.component.scss
@@ -1,136 +1,109 @@
-
-.map-container {
-  width: 60%; /* ancho */
-  height: 60px; /* alto*/
-}
-
-.map-container app-mapa {
+/* Estilos para el mapa de Google */
+.google-map {
   width: 100%;
   height: 100%;
 }
-.dashboard {
-  font-family: Arial, sans-serif;
-  //color: #fff;
-  //background-color: #333;
-  padding: 1px;
-}
 
-header {
+/* Estilos para la sección derecha */
+.right-section {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-bottom: 10px;
-  //border-bottom: 1px solid #444;
+  flex-direction: column;
+  height: 100%;
 }
 
-.header-right button {
-  //background-color: #555;
-  //color: #fff;
-  border: none;
-  padding: 10px 20px;
-  margin: 0 5px;
+/* Estilos para la lista de dispositivos */
+.scrollable-card {
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+.list-group-item {
   cursor: pointer;
+  transition: transform 0.2s ease-in-out, color 0.2s ease-in-out, font-weight 0.2s ease-in-out; /* Transiciones suaves */
 }
 
-.fontable{
- font-size: 0.7em;
-  //color: #978f8f71;
+/* Estilos para la lista de dispositivos */
+.scrollable-list {
+  overflow-x: auto; /* Scroll horizontal */
+  white-space: nowrap; /* Evita el wrapping de los elementos */
 }
-.fontables{
-  font-size: 0.9em;
-   //color: #978f8f71;
- }
+
+.list-group-horizontal {
+  display: inline-flex; /* Flexbox horizontal */
+  flex-direction: row; /* Dirección horizontal */
+}
+
+.list-group-item {
+  flex: 0 0 auto; /* No expandir los elementos */
+  margin-right: 0px; /* Espacio entre elementos */
+}
+
+/* Estilos para la tabla de detalles de dispositivos */
+.table-responsive {
+  overflow-y: auto;
+  max-height: 400px;
+}
+
+/* Estilos generales para la tarjeta de detalles */
+.card-body {
+  padding: 1.25rem;
+}
 
 
-.stats {
-  display: flex;
-  justify-content: space-between;
-  //border-bottom: 1px solid #444;
+/* Estilos cuando el elemento está seleccionado */
+.list-group-item.selected {
+  transform: scale(1.1); /* Escala al seleccionar */
+  font-weight: bold; /* Texto en negrita */
+  color: #00ba2ed1; /* Color de texto cuando está seleccionado */
+}
+.custom-list-group .list-group-item {
+  border-bottom: none; /* Eliminar la línea de separación */
+}
+
+
+/* Estilos para la sección de estadísticas */
+.stats-card {
+  flex: 0;
 }
 
 .stat {
-  flex: 1; /* Ocupa el mismo espacio dentro del contenedor flex */
-  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
 }
 
 .stat .value {
-  font-size: 1em;
-  display: block;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .stat .label {
-  font-size: 0.8em;
-  //color: #ccc;
+  font-size: 1rem;
 }
 
-.content {
+/* Estilos para la tabla de detalles de dispositivos */
+.table-responsive {
+  overflow-y: auto;
+  max-height: 400px;
+}
+
+/* Estilos para la paginación */
+.d-flex {
   display: flex;
-  margin-top: 20px;
 }
 
-.geo-performance {
-  flex: 2;
-  padding-right: 20px;
+.justify-content-center {
+  justify-content: center;
 }
 
-.map {
-  height: 800px;
- // background-color: #222;
+.mt-3 {
+  margin-top: 1rem;
 }
 
-.right-section {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
+/* Estilos generales para la tarjeta de detalles */
+.card-body {
+  padding: 1.25rem;
 }
-
-.details, .user-experience, .top-slow {
-  margin-bottom: 10px;
-}
-
-.detail, .experience {
-  //background-color: #444;
-  padding: 5px;
-  margin: 1px 0;
-  border-radius: 5px;
-}
-
-.detail .value, .experience .value {
-  font-size: 1.5em;
-  display: block;
-}
-
-.satisfaction {
-  display: flex;
-  justify-content: space-around;
-}
-
-.satisfied {
-  color: #2ecc71;
-}
-
-.tolerating {
-  color: #f39c12;
-}
-
-.frustrated {
-  color: #e74c3c;
-}
-
-.top-slow table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-th, td {
-  padding: 5px;
-  text-align: left;
-  
-}
-
-
-.page-views {
-  margin-top: 20px;
-  padding-top: 20px;
-  //border-top: 1px solid #444;
+.custom-text-right {
+  text-align: right !important; /* Asegura que el estilo se aplique incluso con alta especificidad */
 }
