--- a/src/app/views/mapas/zonas-seguras/zonas-seguras.component.scss
+++ b/src/app/views/mapas/zonas-seguras/zonas-seguras.component.scss
@@ -10,9 +10,7 @@
   }
   
   #map-container {
-    height: 600px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    margin-top: 20px; // Margen superior
   }
   
   //CÓDIGO CSS PARA LOS CONTENEDORES DE LOS BOTONES
