--- a/src/app/views/dispositivo/dispositivo.component.html
+++ b/src/app/views/dispositivo/dispositivo.component.html
@@ -57,7 +57,7 @@
                 </td>
                 <td>
                   <div class="fw-semibold text-nowrap" [ngStyle]="{ 'color': dispo.disponible ? 'green' : 'red', 'font-weight': dispo.disponible ? 'bold' : 'normal' }">
-                    {{ dispo.disponible ? 'Disponible' : 'Prestado' }}
+                    {{ dispo.disponible ? 'Disponible' : 'No disponible' }}
                   </div>
                 </td>
                 <td>
@@ -75,13 +75,21 @@
           <div class="d-flex justify-content-center mt-3">
             <pagination-controls (pageChange)="p = $event"></pagination-controls>
           </div>
-        </div>
-
-        <!-- AQUI INICIAN LOS FORMULARIOS DE INGRESO Y MODIFICACION SEGUN CORRESPONDA-->
-        <div *ngIf="!showTablec">
-          <form #myForm="ngForm" (ngSubmit)="crearDispositivo()">
-            <c-input-group class="mb-3">
-              <span cInputGroupText>
+          </div>
+          <!-- tu-componente.component.html -->
+          <div #content>
+            <!-- Contenido que se convertirá en PDF -->
+            <div>ARIEL GUAMAN</div>
+          </div>
+          
+          <!-- Botón para generar y visualizar el PDF en nueva pestaña -->
+          <button (click)="generarPDF()">Generar PDF</button>
+          
+          <!-- AQUI INICIAN LOS FORMULARIOS DE INGRESO Y MODIFICACION SEGUN CORRESPONDA-->
+          <div *ngIf="!showTablec">
+            <form #myForm="ngForm" (ngSubmit)="crearDispositivo()">
+              <c-input-group class="mb-3">
+                <span cInputGroupText>
                 <svg cIcon name="cilItalic"></svg>
               </span>
               <select name="Categoria" id="Categoria" class="form-control" [(ngModel)]="categoriaselet" required>
@@ -258,4 +266,55 @@
     </c-card>
   </c-col>
 </c-row>
+<c-toaster [placement]="position" class="p-3" position="fixed" style="position: fixed; top: 20px; right: 20px; z-index: 1050;">
+  <c-toast
+    (timer)="onTimerChange($event)"
+    (visibleChange)="onVisibleChange($event)"
+    [visible]="visible"
+    class="success-toast">
+    <c-toast-header class="success-toast-header">
+      <svg cIcon name="cilCheck" class="icon-success"></svg> <!-- Icono de éxito -->
+      <h5 class="success-heading">Edicion de Dispositivo exitoso</h5>
+    </c-toast-header>
+    <c-toast-body class="success-toast-body">
+      <p class="success-toast-message" >Dispositivo editado con exito</p>
+    </c-toast-body>
+  </c-toast>
+</c-toaster>
+
+
+
+<c-toaster [placement]="position" class="p-3" position="fixed" style="position: fixed; top: 20px; right: 20px; z-index: 1050;">
+  <c-toast
+    (timer)="onTimerChange($event)"
+    (visibleChange)="onVisibleChange($event)"
+    [visible]="visible"
+    class="success-toast">
+    <c-toast-header class="success-toast-header">
+      <svg cIcon name="cilCheck" class="icon-success"></svg> <!-- Icono de éxito -->
+      <h5 class="success-heading">Creacion de Dispositivo exitoso</h5>
+    </c-toast-header>
+    <c-toast-body class="success-toast-body">
+      <p class="success-toast-message" >Dispositivo creado con exito</p>
+    </c-toast-body>
+  </c-toast>
+</c-toaster>
+
+
+<c-toaster [placement]="position2" class="p-3" position="fixed" style="position: fixed; top: 20px; right: 20px; z-index: 1050;">
+  <c-toast
+    (timer)="onTimerChange2($event)"
+    (visibleChange)="onVisibleChange2($event)"
+    [visible]="visible2"
+    class="success-toast">
+    <c-toast-header class="success-toast-header">
+      <svg cIcon name="cilCheck" class="icon-success"></svg> <!-- Icono de éxito -->
+      <h5 class="success-heading">Edicion de Dispositivo exitoso</h5>
+    </c-toast-header>
+    <c-toast-body class="success-toast-body">
+      <p class="success-toast-message" >Dispositivo editado con exito</p>
+    </c-toast-body>
+  </c-toast>
+</c-toaster>
+
 
