--- a/src/app/views/prestamo/prestamo.component.html
+++ b/src/app/views/prestamo/prestamo.component.html
@@ -281,7 +281,7 @@
     </c-modal-header>
     <c-modal-body>
       <div class="d-flex align-items-center">
-        <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Secretary" class="rounded-circle me-3">
+        <img src="https://www.insidehighered.com/sites/default/files/media/barber%20handshake.jpg" alt="Secretary" class="rounded-circle me-3">
         <div>
           <form [formGroup]="finalizarForm" (ngSubmit)="onFinalizarSubmit()">
             <div class="mb-3">
