--- a/src/app/views/prestamo/prestamo.component.scss
+++ b/src/app/views/prestamo/prestamo.component.scss
@@ -190,6 +190,7 @@
   align-items: center;
   background-color: #f8f9fa;
   border-bottom: 1px solid #dee2e6;
+  color: #212631;
 }
 
 .icon-secretary {
@@ -201,8 +202,8 @@
 }
 
 img.rounded-circle {
-  width: 100px;
-  height: 100px;
+  width: 120px;
+  height: 120px;
   border-radius: 50%;
 }
 .text-danger {
