--- a/src/app/layout/default-layout/default-footer/default-footer.component.html
+++ b/src/app/layout/default-layout/default-footer/default-footer.component.html
@@ -1,12 +1,12 @@
 <!--<c-footer>-->
   <div>
-    <a href="https://coreui.io/" target="_blank">CoreUI</a>
-    <span> &copy; 2024 creativeLabs</span>
+    <a href="https://www.tecazuay.edu.ec/" target="_blank">TecAzuay</a>
+    <span> &copy; Josias Aldaz-Frank Barrera-Ariel Guaman-David Guambaña</span>
   </div>
-  <div class="ms-auto">
-    Powered by
-    <a href="https://coreui.io/angular" target="_blank">
-      <span> CoreUI for Angular</span>
-    </a>
-  </div>
+<!--  <div class="ms-auto">-->
+<!--    Powered by-->
+<!--    <a href="https://coreui.io/angular" target="_blank">-->
+<!--      <span> CoreUI for Angular</span>-->
+<!--    </a>-->
+<!--  </div>-->
 <!--</c-footer>-->
