--- a/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/app/layout/default-layout/default-header/default-header.component.html
@@ -1,43 +1,3 @@
-
-<c-modal id="liveDemoModal" [visible]="visible" (visibleChange)="handleLiveDemoChange($event)" class="modal-custom">
-<!--  <c-modal-header class="modal-header-custom">-->
-<!--    <svg cIcon class="icon-secretary me-2" name="cilUser" size="lg"></svg>-->
-<!--    <h5 cModalTitle>Información del usuario</h5>-->
-<!--    <button (click)="toggleLiveDemo()" cButtonClose></button>-->
-<!--  </c-modal-header>-->
-<!--  <c-modal-body>-->
-<!--    <div class="d-flex align-items-center">-->
-<!--      <img src="https://www.w3schools.com/howto/img_avatar.png" alt="Secretary" class="rounded-circle me-3">-->
-<!--      <div>-->
-<!--        <p><strong>Cédula:</strong> {{sessionStorage.getItem('cedula')}}</p>-->
-<!--        <p><strong>Nombre:</strong> {{sessionStorage.getItem('nombre')}}</p>-->
-<!--        <p><strong>Apellido:</strong> {{sessionStorage.getItem('apellido')}}</p>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </c-modal-body>-->
-<!--  <c-modal-footer>-->
-<!--    <button (click)="toggleLiveDemo()" cButton color="secondary">Cerrar</button>-->
-<!--  </c-modal-footer>-->
-<!--  <div class="modal-dialog">-->
-<!--    <div class="modal-content modal-md">-->
-<!--      <div class="modal-header">-->
-<!--        <h4 class="modal-title">Titulo</h4>-->
-<!--        <button-->
-<!--          #cerrarModal-->
-<!--          id="cerrarModal"-->
-<!--          type="button"-->
-<!--          class="btn-close"-->
-<!--          data-bs-dismiss="modal"-->
-<!--        ></button>-->
-<!--      </div>-->
-<!--      <div class="modal-body">-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
-</c-modal>
-
-
-
 <ng-container>
   <c-container [fluid]="true" class="border-bottom px-4">
     <button
@@ -51,27 +11,29 @@
       <svg cIcon name="cilMenu" size="lg"></svg>
     </button>
     <c-header-nav class="d-none d-md-flex">
-      <c-nav-item>
-        <a cNavLink routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
-      </c-nav-item>
-      <c-nav-item>
-        <a cNavLink routerLink="/users" routerLinkActive="active">Users</a>
-      </c-nav-item>
-      <c-nav-item>
-        <a cNavLink routerLink="/settings" routerLinkActive="active">Settings</a>
-      </c-nav-item>
+<!--      <c-nav-item>-->
+<!--        <a cNavLink routerLink="/dashboard" routerLinkActive="active">Dashboard</a>-->
+<!--      </c-nav-item>-->
+<!--      <c-nav-item>-->
+<!--        <a cNavLink routerLink="/users" routerLinkActive="active">Users</a>-->
+<!--      </c-nav-item>-->
+<!--      <c-nav-item>-->
+<!--        <a cNavLink routerLink="/settings" routerLinkActive="active">Settings</a>-->
+<!--      </c-nav-item>-->
     </c-header-nav>
 
     <c-header-nav class="d-none d-md-flex ms-auto ">
-      <a cNavLink>
-        <svg cIcon class="my-1" name="cilBell" size="lg"></svg>
-      </a>
-      <a cNavLink>
-        <svg cIcon class="my-1" name="cilList" size="lg"></svg>
-      </a>
-      <a cNavLink>
-        <svg cIcon class="my-1" name="cilEnvelopeOpen" size="lg"></svg>
-      </a>
+<!--      <a cNavLink>-->
+<!--        <svg cIcon class="my-1" name="cilBell" size="lg"></svg>-->
+<!--      </a>-->
+      <ng-container *ngTemplateOutlet="AlertDropdown" />
+
+      <!--      <a cNavLink>-->
+<!--        <svg cIcon class="my-1" name="cilList" size="lg"></svg>-->
+<!--      </a>-->
+<!--      <a cNavLink>-->
+<!--        <svg cIcon class="my-1" name="cilEnvelopeOpen" size="lg"></svg>-->
+<!--      </a>-->
     </c-header-nav>
 
     <c-header-nav class="ms-auto ms-md-0">
@@ -118,80 +80,81 @@
         </h6>
       </li>
       <li>
-        <a cDropdownItem routerLink="">
+        <a cDropdownItem routerLink="/alerta">
           <svg cIcon class="me-2" name="cilBell"></svg>
-          Updates
-          <c-badge class="ms-2 float-end" color="info"> 42</c-badge>
+          Alertas
+          <c-badge class="ms-2 float-end" color="info"> !!</c-badge>
         </a>
       </li>
       <li>
-        <a cDropdownItem routerLink="/apps/email/inbox">
-          <svg cIcon class="me-2" name="cilEnvelopeOpen"></svg>
-          Messages
-          <c-badge class="ms-2 float-end" color="success">
-            42
-          </c-badge>
+      <li >
+        <a cDropdownItem class="pointer-cursor" routerLink="/perfil">
+          <svg cIcon class="me-2" name="cilUser"></svg>
+          Profile
         </a>
       </li>
-      <li>
-        <a cDropdownItem routerLink="">
-          <svg cIcon class="me-2" name="cilTask"></svg>
-          Tasks
-          <c-badge class="ms-2 float-end" color="danger"> 42</c-badge>
-        </a>
-      </li>
-      <li>
-        <a cDropdownItem routerLink="">
-          <svg cIcon class="me-2" name="cilCommentSquare"></svg>
-          Comments
-          <c-badge class="ms-auto" color="warning"> 42</c-badge>
-        </a>
-      </li>
+<!--        <a cDropdownItem routerLink="/apps/email/inbox">-->
+<!--          <svg cIcon class="me-2" name="cilEnvelopeOpen"></svg>-->
+<!--          Messages-->
+<!--          <c-badge class="ms-2 float-end" color="success">-->
+<!--            42-->
+<!--          </c-badge>-->
+<!--        </a>-->
+<!--      </li>-->
+<!--      <li>-->
+<!--        <a cDropdownItem routerLink="">-->
+<!--          <svg cIcon class="me-2" name="cilTask"></svg>-->
+<!--          Tasks-->
+<!--          <c-badge class="ms-2 float-end" color="danger"> 42</c-badge>-->
+<!--        </a>-->
+<!--      </li>-->
+<!--      <li>-->
+<!--        <a cDropdownItem routerLink="">-->
+<!--          <svg cIcon class="me-2" name="cilCommentSquare"></svg>-->
+<!--          Comments-->
+<!--          <c-badge class="ms-auto" color="warning"> 42</c-badge>-->
+<!--        </a>-->
+<!--      </li>-->
       <li>
         <h6 cDropdownHeader class="bg-body-secondary text-body-secondary fw-semibold py-2">
           Settings
         </h6>
       </li>
       <li></li>
-      <li (click)="toggleLiveDemo()">
-        <a cDropdownItem class="pointer-cursor">
-          <svg cIcon class="me-2" name="cilUser"></svg>
-          Profile
-        </a>
-      </li>
-      <li>
-        <a cDropdownItem routerLink="">
-          <svg cIcon class="me-2" name="cilSettings"></svg>
-          Settings
-        </a>
-      </li>
-      <li>
-        <a cDropdownItem routerLink="">
-          <svg cIcon class="me-2" name="cilCreditCard"></svg>
-          Payments
-          <c-badge class="ms-2 float-end" color="secondary">
-            42
-          </c-badge>
-        </a>
-      </li>
-      <li>
-        <a cDropdownItem routerLink="">
-          <svg cIcon class="me-2" name="cilFile"></svg>
-          Projects
-          <c-badge class="ms-2 float-end" color="primary">
-            42
-          </c-badge>
-        </a>
-      </li>
+
+<!--      <li>-->
+<!--        <a cDropdownItem routerLink="">-->
+<!--          <svg cIcon class="me-2" name="cilSettings"></svg>-->
+<!--          Settings-->
+<!--        </a>-->
+<!--      </li>-->
+<!--      <li>-->
+<!--        <a cDropdownItem routerLink="">-->
+<!--          <svg cIcon class="me-2" name="cilCreditCard"></svg>-->
+<!--          Payments-->
+<!--          <c-badge class="ms-2 float-end" color="secondary">-->
+<!--            42-->
+<!--          </c-badge>-->
+<!--        </a>-->
+<!--      </li>-->
+<!--      <li>-->
+<!--        <a cDropdownItem routerLink="">-->
+<!--          <svg cIcon class="me-2" name="cilFile"></svg>-->
+<!--          Projects-->
+<!--          <c-badge class="ms-2 float-end" color="primary">-->
+<!--            42-->
+<!--          </c-badge>-->
+<!--        </a>-->
+<!--      </li>-->
       <li>
         <hr cDropdownDivider />
       </li>
-      <li>
-        <a cDropdownItem routerLink="" (click)="logout()">
-          <svg cIcon class="me-2" name="cilLockLocked"></svg>
-          Lock Account
-        </a>
-      </li>
+<!--      <li>-->
+<!--        <a cDropdownItem routerLink="" (click)="logout()">-->
+<!--          <svg cIcon class="me-2" name="cilLockLocked"></svg>-->
+<!--          Lock Account-->
+<!--        </a>-->
+<!--      </li>-->
       <li>
         <a cDropdownItem routerLink="" (click)="logout()">
           <svg cIcon class="me-2" name="cilAccountLogout"></svg>
@@ -266,3 +229,59 @@
     </div>
   </c-dropdown>
 </ng-template>
+<!--<ng-template #AlertDropdown>-->
+<!--  <c-dropdown alignment="end" variant="nav-item" [autoClose]="false">-->
+<!--    <button [caret]="false" cDropdownToggle aria-label="Open configuration picker" (click)="crud_close()">-->
+<!--      <svg cIcon name="cilBell" size="lg"></svg>-->
+<!--    </button>-->
+<!--    <div cDropdownMenu style="width: 260px; padding: 10px;"> &lt;!&ndash; Ajuste de anchura y padding &ndash;&gt;-->
+<!--      <div>-->
+<!--        <h5 class="card-title d-flex align-items-center mb-3">Alertas Recientes</h5>-->
+<!--        <div *ngFor="let alerta of alertas" class="alerta-item">-->
+<!--          <p><strong>Fecha:</strong> {{ alerta.fecha }}</p>-->
+<!--          <p><strong>Descripción:</strong> {{ alerta.descripcion }}</p>-->
+<!--          <p><strong>Dispositivo:</strong> {{ alerta.dispositivo?.nombre }}</p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </c-dropdown>-->
+<!--</ng-template>-->
+<ng-template #AlertDropdown>
+  <c-dropdown alignment="end" variant="nav-item" [autoClose]="false">
+    <button [caret]="false" cDropdownToggle aria-label="Open configuration picker" (click)="crud_close()">
+      <svg cIcon name="cilBell" size="lg"></svg>
+    </button>
+    <div cDropdownMenu style="width: 260px; padding: 10px; max-height: 300px; overflow-y: auto;">
+      <div>
+        <h5 class="card-title d-flex align-items-center mb-3">Alertas Recientes</h5>
+        <div *ngFor="let alerta of alertas.slice(-5)" class="alerta-item">
+          <div class="alerta-header">
+            <span class="alerta-dispositivo">{{ alerta.dispositivo?.nombre }}</span>
+            <span class="alerta-fecha">{{ alerta.fecha ? alerta.fecha.toString().split("T")[0]  : 'NA' }}
+              <div class="small text-body-secondary text-nowrap"><span>{{ alerta.fecha ? formatDate2(alerta.fecha, 'HH:mm') : 'NA' }}</span></div>
+            </span>
+          </div>
+          <p class="alerta-descripcion">{{ alerta.descripcion }}</p>
+        </div>
+      </div>
+    </div>
+  </c-dropdown>
+</ng-template>
+<!-- custom-modal.component.html -->
+<div class="modal" *ngIf="isVisible">
+  <div class="modal-content">
+    <div class="modal-header">
+      <span class="close" (click)="closeModal()">&times;</span>
+      <h2>Nueva Alerta</h2>
+    </div>
+    <div class="modal-body">
+      <p><strong>Fecha:</strong> {{ alerta?.fecha }}</p>
+      <p><strong>Descripción:</strong> {{ alerta?.descripcion }}</p>
+      <p><strong>Dispositivo:</strong> {{ alerta?.dispositivo?.nombre }}</p>
+    </div>
+    <div class="modal-footer">
+      <button (click)="closeModal()">Cerrar</button>
+    </div>
+  </div>
+</div>
+
