--- a/src/app/layout/default-layout/default-header/default-header.component.scss
+++ b/src/app/layout/default-layout/default-header/default-header.component.scss
@@ -77,3 +77,105 @@ img.rounded-circle {
   height: 100px;
   border-radius: 50%;
 }
+
+
+
+
+
+
+
+.alerta-item {
+  background-color: #e55353; /* Fondo rojo claro */
+  border-left: 4px solid #dc3545; /* Borde rojo */
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 4px;
+  color: #f3f4f7; /* Color del texto rojo oscuro */
+}
+
+.alerta-header {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.alerta-fecha, .alerta-dispositivo {
+  font-size: 17px;
+}
+
+.alerta-descripcion {
+  margin: 0;
+  font-size: 16px;
+}
+
+.c-dropdown-menu {
+  background-color: #ffffff; /* Fondo blanco */
+  border: 1px solid #eaeaea; /* Borde gris claro */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra */
+}
+
+.c-dropdown-menu h5 {
+  color: #f3f4f7; /* Color del texto del título */
+}
+
+
+
+/* custom-modal.component.css */
+.modal {
+  display: flex;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 500px;
+  border-radius: 10px;
+  animation: animatetop 0.4s;
+}
+
+@keyframes animatetop {
+  from {top: -300px; opacity: 0}
+  to {top: 0; opacity: 1}
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  padding: 2px 16px;
+  background-color: #f8d7da;
+  color: #721c24;
+}
+
+.modal-body {padding: 2px 16px;}
+
+.modal-footer {
+  padding: 2px 16px;
+  background-color: #f8d7da;
+  color: #721c24;
+  text-align: right;
+}
