--- a/src/app/views/prestamo/prestamo.component.html
+++ b/src/app/views/prestamo/prestamo.component.html
@@ -128,7 +128,7 @@
           <th>Tiempo Restante</th>
           <th>Finalizado</th>
           <th>Finalizar</th>
-          <th>Editar</th>
+<!--          <th>Editar</th>-->
           <th>Eliminar</th>
           <th>Historico</th>
         </tr>
@@ -164,9 +164,9 @@
               <svg cIcon name="cilCheck" size="lg"></svg>
             </button>
           </td>
-          <td>
-            <button type="button" name="button" (click)="edit(i)" class="btn btn-primary"><svg cIcon name="cilPencil" size="lg"></svg></button>
-          </td>
+<!--          <td>-->
+<!--            <button type="button" name="button" (click)="edit(i)" class="btn btn-primary"><svg cIcon name="cilPencil" size="lg"></svg></button>-->
+<!--          </td>-->
           <td>
             <button type="button" (click)="eliminarPrestamo(prestamo.id_prestamo)" class="btn btn-danger"><svg cIcon name="cilTrash" size="lg"></svg></button>
           </td>
