--- a/src/app/views/alerta/alerta.component.html
+++ b/src/app/views/alerta/alerta.component.html
@@ -16,7 +16,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let alert of filteredAlertas(); let i = index">
+            <tr *ngFor="let alert of filteredAlertas()| paginate: { itemsPerPage: 5, currentPage: p }; let i = index">
                 <td>{{alert.dispositivo?.nombre}}</td>
                 <td>{{alert.descripcion}}</td>
                 <td>
@@ -28,21 +28,38 @@
                 <button type="button" name="button"  class="btn btn-danger" (click)="mostrarDetalles(alert)">Detalles</button>
                 </td>
             </tr>
-            <tr *ngIf="alertSeleccionado">
-                <td [attr.colspan]="4">
-                    <div class="detalles">
-                        <p><strong>Dispositivo:</strong> {{alertSeleccionado.dispositivo.nombre}} - {{alertSeleccionado.dispositivo.modelo.nombre}} - {{alertSeleccionado.dispositivo.numSerie}} </p>
-                        <p><strong>Descripción de Alerta:</strong> {{alertSeleccionado.descripcion}}</p>
-                        <p><strong>Fecha de Alerta:</strong> {{alertSeleccionado.fecha.toString().split("T")[0]}} {{alertSeleccionado.fecha.toString().split("T")[1].split(".")[0]}}</p>
-                        <button type="button" class="btn btn-secondary" (click)="cerrarDetalles()">Cerrar</button>
-                      </div>
-                </td>
-            </tr>
+<!--            <tr *ngIf="alertSeleccionado">-->
+<!--                <td [attr.colspan]="4">-->
+<!--                    <div class="detalles">-->
+<!--                        <p><strong>Dispositivo:</strong> {{alertSeleccionado.dispositivo.nombre}} - {{alertSeleccionado.dispositivo.modelo.nombre}} - {{alertSeleccionado.dispositivo.numSerie}} </p>-->
+<!--                        <p><strong>Descripción de Alerta:</strong> {{alertSeleccionado.descripcion}}</p>-->
+<!--                        <p><strong>Fecha de Alerta:</strong> {{alertSeleccionado.fecha.toString().split("T")[0]}} {{alertSeleccionado.fecha.toString().split("T")[1].split(".")[0]}}</p>-->
+<!--                        <button type="button" class="btn btn-secondary" (click)="cerrarDetalles()">Cerrar</button>-->
+<!--                      </div>-->
+<!--                </td>-->
+<!--            </tr>-->
             </tbody>
         </table>
+      <div class="d-flex justify-content-center mt-3">
+        <pagination-controls (pageChange)="p = $event"></pagination-controls>
+      </div>
     </div>
   </div>
-<!-- alertas.component.html -->
+
+<c-modal [(visible)]="isModalVisible">
+  <c-modal-header>
+    <h5 class="modal-title">Detalles de la Alerta</h5>
+    <button type="button" class="btn-close" aria-label="Close" (click)="cerrarDetalles()"></button>
+  </c-modal-header>
+  <c-modal-body *ngIf="alertSeleccionado">
+    <p><strong>Dispositivo:</strong> {{alertSeleccionado.dispositivo.nombre}} - {{alertSeleccionado.dispositivo.modelo.nombre}} - {{alertSeleccionado.dispositivo.numSerie}}</p>
+    <p><strong>Descripción de Alerta:</strong> {{alertSeleccionado.descripcion}}</p>
+    <p><strong>Fecha de Alerta:</strong> {{alertSeleccionado.fecha.toString().split("T")[0]}} {{alertSeleccionado.fecha.toString().split("T")[1].split(".")[0]}}</p>
+  </c-modal-body>
+  <c-modal-footer>
+    <button type="button" class="btn btn-secondary" (click)="cerrarDetalles()">Cerrar</button>
+  </c-modal-footer>
+</c-modal>
 
 
 
