PDFMONITIREO Y ALERTAS COMPLETO
ESO MERO

--- a/src/app/views/prestamo/prestamo.component.html
+++ b/src/app/views/prestamo/prestamo.component.html
@@ -171,7 +171,7 @@
             <button type="button" (click)="eliminarPrestamo(prestamo.id_prestamo)" class="btn btn-danger"><svg cIcon name="cilTrash" size="lg"></svg></button>
           </td>
           <td>
-            <button type="button" (click)="listarHistoricos(prestamo) "class="btn btn-secondary" ><svg cIcon name="cil-print"></svg></button>
+            <button type="button" (click)="listarhistoalertas(prestamo) "class="btn btn-secondary" ><svg cIcon name="cil-print"></svg></button>
           </td>
         </tr>
 
